Pause/resume started

--- a/bin/ats-client.tmpl
+++ b/bin/ats-client.tmpl
@@ -86,6 +86,10 @@ usage()
     echo "  --import-appliance APPLIANCE"
     echo "    imports the appliance "
     echo ""
+    echo "--pause-machine VM_NAME"
+    echo "--resume-machine VM_NAME"
+    echo "--pause-client CLIENT_NAME"
+    echo "--resume-client CLIENT_NAME"
     echo "--check-client-ssh"
     echo "--check-client-status"
     echo "--check-machine"
