--- a/bin/vmm.tmpl
+++ b/bin/vmm.tmpl
@@ -23,31 +23,31 @@
 # MA  02110-1301, USA.                                              
 #
 
-ATS_DIR=__ATS_DIR__
-ATS_NAME=$(basename $0)
+VMM_DIR=__VMM_DIR__
+VMM_NAME=$(basename $0)
 
 SHARE_DIR=
-SCRIPT_DIR=$ATS_DIR/share/ats/scripts
+SCRIPT_DIR=$VMM_DIR/share/vmm/scripts
 
 
 
 #
 # Read in functions file
 #
-ATS_FUNCTION=$SCRIPT_DIR/functions
-if [ ! -f  $ATS_FUNCTION ]
+VMM_FUNCTION=$SCRIPT_DIR/functions
+if [ ! -f  $VMM_FUNCTION ]
 then
-    echo "$ATS_NAME: Could not find functions file ($ATS_FUNCTION)"
+    echo "$VMM_NAME: Could not find functions file ($VMM_FUNCTION)"
     # exit 6 - means we couldn't find the functions file
     exit 6
 fi
-. $ATS_FUNCTION
+. $VMM_FUNCTION
 
 
 
 usage()
 {
-    echo "$ATS_NAME [OPTIONS]" 
+    echo "$VMM_NAME [OPTIONS]" 
     echo ""
     echo "RETURN VALUES"
     for i in $(seq 0 $LAST_ERROR)
@@ -102,6 +102,7 @@ usage()
     echo "--wait-for-ssh"
     echo "--open-ssh"
     echo "--check-client-online"
+    echo "--create-client-conf"
     echo ""
 
     exit 0
@@ -292,6 +293,14 @@ do
 	    shift
 	    shift
 	    ;;
+
+	"--create-client-conf")
+	    create_client_conf $2
+	    shift
+	    shift
+	    ;;
+
+
 
 	"--help")
 	    usage
