--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -36,7 +36,7 @@ HTML_FILES=$(MD_FILES:.md=.html)
 MANUALS=$(PDF_FILES)
 
 %.pdf:%.md
-	pandoc -o $@ $<
+	pandoc --section-divs -N --chapters -o $@ $<
 
 %.html:%.md
 	pandoc -s -S --toc -o $@ $<
