--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -1,6 +1,6 @@
 #
 #                                                                   
-#                   VVM
+#                   Testing Machine
 #                      
 #   Copyright (C) 2012, 2013 TIS Innovation Park
 #                                                                   
@@ -94,5 +94,4 @@ clean:
 install: $(MANUALS)
 	-mkdir -p $(SHARE_DIR)/doc/
 	cp $(MANUALS) $(SHARE_DIR)/doc/
-
 
