--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -33,7 +33,7 @@ BIN_DIR=__BIN_DIR__
 #
 # Sources for manuals
 #
-MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md vmm-devel-manual.md egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md
+MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md vmm-devel-manual.md egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md
 
 #
 # Generated docs
@@ -41,8 +41,9 @@ MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md
 GEN_DIR=generated-files/
 TESTINGMACHINE_MD=$(GEN_DIR)/testingmachine-manual.md
 DEVEL_MD=$(GEN_DIR)/vmm-devel-manual.md
+QUICK_GUIDE_MD=$(GEN_DIR)/tm-quick-guide.md
 
-GEN_SRC= $(DEVEL_MD) $(TESTINGMACHINE_MD)
+GEN_SRC= $(DEVEL_MD) $(TESTINGMACHINE_MD) $(QUICK_GUIDE_MD)
 PDF_FILES=$(GEN_SRC:.md=.pdf)
 HTML_FILES=$(GEN_SRC:.md=.html)
 MANUALS=$(PDF_FILES) $(HTML_FILES)
@@ -58,10 +59,18 @@ MANUALS=$(PDF_FILES) $(HTML_FILES)
 	pandoc -s -S --toc -o $@ $<
 
 
+$(QUICK_GUIDE_MD): $(MD_SRC)
+	-mkdir -p $(GEN_DIR)
+	cp  tm-quick-guide.md      $@ 
+	cat  tm-about.md        >> $@ 
+	cat  tm-features.md     >> $@ 
+
 $(TESTINGMACHINE_MD): $(MD_SRC)
 	-mkdir -p $(GEN_DIR)
-	cp testingmachine-manual.md $@
+	cp   testingmachine-manual.md $@
+	cat  tm-about.md       >> $@ 
 	cat  egov-overview.md  >> $@ 
+	cat  tm-features.md    >> $@ 
 	cat  install.md        >> $@ 
 	cat  setup.md          >> $@ 
 	cat  using.md          >> $@ 
