--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -1,8 +1,7 @@
 #!/bin/bash
-
 #
 #                                                                   
-#                   VMM
+#                   Testing Machine
 #                      
 #   Copyright (C) 2012, 2013 TIS Innovation Park
 #                                                                   
