--- a/bin/tm-vmm-auto.tmpl
+++ b/bin/tm-vmm-auto.tmpl
@@ -1,8 +1,7 @@
-#!/bin/bash
-
+#
 #
 #                                                                   
-#                   VVM
+#                   Testing Machine
 #                      
 #   Copyright (C) 2012, 2013 TIS Innovation Park
 #                                                                   
