--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -34,7 +34,7 @@ TM_VERSION=__TM_VERSION__
 #
 # Sources for manuals
 #
-MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md  egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md tm-developer.md tm-developer-intro.md tm-communication.md
+MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md  egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md tm-developer.md tm-developer-intro.md tm-communication.md faq.md
 
 #
 # Generated docs
@@ -43,8 +43,9 @@ GEN_DIR=generated-files/
 TESTINGMACHINE_MD=$(GEN_DIR)/testingmachine-manual.md
 QUICK_GUIDE_MD=$(GEN_DIR)/tm-quick-guide.md
 DEVEL_GUIDE_MD=$(GEN_DIR)/tm-developer.md
+FAQ_MD=$(GEN_DIR)/tm-faq.md
 
-GEN_SRC= $(DEVEL_MD) $(TESTINGMACHINE_MD) $(QUICK_GUIDE_MD) $(DEVEL_GUIDE_MD)
+GEN_SRC= $(DEVEL_MD) $(TESTINGMACHINE_MD) $(QUICK_GUIDE_MD) $(DEVEL_GUIDE_MD) $(FAQ_MD)
 PDF_FILES=$(GEN_SRC:.md=.pdf)
 HTML_FILES=$(GEN_SRC:.md=.html)
 MANUALS=$(PDF_FILES) $(HTML_FILES)
@@ -78,6 +79,10 @@ $(DEVEL_GUIDE_MD): $(MD_SRC)
 	cat  tm-communication.md >> $@ 
 	cat  tm-developer.md     >> $@
 
+
+$(FAQ_MD): $(MD_SRC)
+	-mkdir -p $(GEN_DIR)
+	cp   faq.md $@
 
 $(TESTINGMACHINE_MD): $(MD_SRC)
 	-mkdir -p $(GEN_DIR)
