Android: getting port and name from attached devices.  Andoird+VBox: better printing of running machines

--- a/Makefile.tmpl
+++ b/Makefile.tmpl
@@ -27,7 +27,7 @@ TM_VMM_AUTO=bin/tm-vmm-auto
 TM_VERSION=__MAKEFILE_TM_VERSION__
 
 BINS=${TM_VMM} ${TM_VMM_AUTO}
-SCRIPTS=scripts/vmm-client-functions scripts/functions scripts/generate-conf
+SCRIPTS=scripts/vmm-client-functions scripts/vmm-client-android-specific scripts/functions scripts/generate-conf
 LOGGERS=scripts/loggers/debug-logger scripts/loggers/txt-logger 
 EXAMPLES=examples/searduino.sh
 
