Added new options to usage printout

--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -106,6 +106,9 @@ usage()
     echo "--create-client-conf"
     echo "--copy-to-client"
     echo "--copy-from-client"
+    echo "--snapshot-client"
+    echo "--client-copy-file"
+    echo "--is-client-up"
     echo "--version"
     echo ""
 
