--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -109,6 +109,7 @@ usage()
     echo "--is-client-up"
     echo "--version"
     echo "--wait-for-client"
+    echo "--unlock-screen"
     echo ""
 
     exit 0
@@ -340,6 +341,12 @@ do
 	    shift
 	    
 	    is_client_up $CLIENT
+	    ;;
+
+	"--unlock-screen")
+	    CLIENT=$2
+	    shift
+	    unlock_screen $CLIENT
 	    ;;
 
 	"--help")
