--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -305,7 +305,7 @@ do
 	    ;;
 
 	"--create-client-conf")
-	    create_client_conf $2
+	    create_client_conf "$2"
 	    shift
 	    shift
 	    ;;
