bin/tm-vmm.tmpl: Add `--{pause,resume}-machine' parsing'
I had forgot to commit this earlier (it's already in the NEWS file).

--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -176,6 +176,18 @@ do
 	    shift
 	    ;;
 
+	"--pause-machine")
+	    pause_machine $2
+	    shift
+	    shift
+            ;;
+
+	"--resume-machine")
+	    resume_machine $2
+	    shift
+            shift
+	    ;;
+
 	"--check-client-ssh")
 	    VCLIENT=$2
 	    check_client_ssh  $VCLIENT
