--- a/examples/searduino.tmpl
+++ b/examples/searduino.tmpl
@@ -2,7 +2,7 @@
 
 #
 #                                                                   
-#                   VVM
+#                   vmm
 #                      
 #   Copyright (C) 2012, 2013 TIS Innovation Park
 #                                                                   
