--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -35,7 +35,7 @@ TM_MANUALS_DIR=../../tm-manuals
 #
 # Sources for manuals
 #
-MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md  egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md tm-developer.md tm-developer-intro.md tm-communication.md faq.md create-virtual-vbox.md create-virtual-android.md 
+MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md  egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md tm-developer.md tm-developer-intro.md tm-communication.md faq.md create-virtual-vbox.md create-virtual-android.md tm-arch.md 
 
 #
 # Generated docs
@@ -77,6 +77,7 @@ $(DEVEL_GUIDE_MD): $(MD_SRC)
 	-mkdir -p $(GEN_DIR)
 	cp   tm-developer-intro.md  $@ 
 	cat  tm-about.md         >> $@ 
+	cat  tm-arch.md >> $@ 
 	cat  tm-communication.md >> $@ 
 	cat  tm-developer.md     >> $@
 
