--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -35,7 +35,7 @@ TM_MANUALS_DIR=../../tm-manuals
 #
 # Sources for manuals
 #
-MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md  egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md tm-developer.md tm-developer-intro.md tm-communication.md faq.md create-virtual-vbox.md create-virtual-android.md tm-arch.md 
+MD_SRC=egov-overview.md install.md setup.md egov-overview.md install.md setup.md using.md create-virtual.md examples.md contact.md devel.md  egov-detailed.md testingmachine-manual.md selenium.md  misc-tools.md automating.md vmm-options.md tm-quick-guide.md tm-features.md tm-developer.md tm-developer-intro.md tm-communication.md faq.md create-virtual-vbox.md create-virtual-android.md tm-arch.md tm-build.md 
 
 #
 # Generated docs
@@ -77,7 +77,8 @@ $(DEVEL_GUIDE_MD): $(MD_SRC)
 	-mkdir -p $(GEN_DIR)
 	cp   tm-developer-intro.md  $@ 
 	cat  tm-about.md         >> $@ 
-	cat  tm-arch.md >> $@ 
+	cat  tm-arch.md          >> $@ 
+	cat  tm-build.md         >> $@ 
 	cat  tm-communication.md >> $@ 
 	cat  tm-developer.md     >> $@
 
@@ -114,7 +115,7 @@ $(PDF_FILES): $(GEN_SRC)
 $(HTML_FILES): $(GEN_SRC)
 
 clean:
-	@-rm -fr $(PDF_FILES)  $(GEN_DIR)
+	@-rm -fr $(PDF_FILES)  $(GEN_DIR) *~
 
 install: $(MANUALS)
 	-mkdir -p $(SHARE_DIR)/doc/
