--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -369,7 +369,9 @@ do
 	    shift
 	    get_info_for_client "$VCLIENT"
 	    is_client_up
+	    RET=$?
 	    echo "Client up? $? ( 0: up | 1: not up )"
+	    exit $RET
 	    ;;
 
 	"--unlock-screen")
