--- a/bin/tm-vmm.tmpl
+++ b/bin/tm-vmm.tmpl
@@ -370,7 +370,7 @@ do
 	    get_info_for_client "$VCLIENT"
 	    is_client_up
 	    RET=$?
-	    echo "Client up? $? ( 0: up | 1: not up )"
+#	    echo "Client up? $? ( 0: up | 1: not up )"
 	    exit $RET
 	    ;;
 
