--- a/doc/Makefile.tmpl
+++ b/doc/Makefile.tmpl
@@ -49,18 +49,22 @@ FAQ_MD=$(GEN_DIR)/tm-faq.md
 GEN_SRC= $(DEVEL_MD) $(TESTINGMACHINE_MD) $(QUICK_GUIDE_MD) $(DEVEL_GUIDE_MD) $(FAQ_MD)
 PDF_FILES=$(GEN_SRC:.md=.pdf)
 HTML_FILES=$(GEN_SRC:.md=.html)
-MANUALS=$(PDF_FILES) $(HTML_FILES)
+ODT_FILES=$(GEN_SRC:.md=.odt)
+MANUALS=$(PDF_FILES) $(HTML_FILES) $(ODT_FILES)
 
-all: $(PDF_FILES) $(HTML_FILES)
+all: $(PDF_FILES) $(HTML_FILES) $(ODT_FILES)
 
 #
-# Rules for pdf and html generation
+# Rules for pdf, html and odt (OpenDocument Text) generation
 #
 %.pdf:%.md
 	pandoc  -N -o $@ $<
 # --section-divs  --chapters
 
 %.html:%.md
+	pandoc -s -S --toc -o $@ $<
+
+%.odt:%.md
 	pandoc -s -S --toc -o $@ $<
 
 
@@ -113,6 +117,7 @@ pdf: $(PDF_FILES)
 
 $(PDF_FILES): $(GEN_SRC)
 $(HTML_FILES): $(GEN_SRC)
+$(ODT_FILES): $(GEN_SRC)
 
 clean:
 	@-rm -fr $(PDF_FILES)  $(GEN_DIR) *~
